CHANGES
*******

1.1 (unreleased)
==================

* Added a WSGI-based XMLRPC application to trigger conversion via
  XMLRPC.

* Added `get_cached` method for client and XMLRPC client to retrieve
  docs stored in cache.

1.0 (2013-09-02)
================

Major rewrite of the whole package.

* `convert` now uses the commandline tool `unoconv`. You need this
  tool to use the package.

* As `unoconv` has all you want from the package script `convert` (and
  much more!), the `convert` script is not provided as a script any
  more. Simply use `unoconv` instead.

* `oooctl` is now a daemonizer for ``unoconv -l``.

* Apply PEP 8 rules to cachemanager.py.

* Moved unittests to dedicated ``tests/`` dir in package root.

* Switched from Zope testing to `py.test`.

* Removed `pyuno` server, clients and related components.

* Removed `find` functionality as it is based on direct `pyuno` access.

* Removed `zc.buildout` support.

* Removed cherrypy-based restserver. The new WSGI app is the replacement.

* Added WSGI based document converter.

* Added simple htaccess WSGI filter for web authentication.

* Replaced cachemanager with a more robust and lightweight
  version. Old caches do not work any more with this new
  implementation.

* Introduced a new central `Options` component to manage supported
  options for all other components.

0.4 (2011-02-11)
================

* Added functionality to find text in documents. Many thanks to sig at
  akasig.org for the patch!

0.3 (2010-11-17)
================

* Added option to disable caching completely: set ``--cache-dir`` to
  empty string to disable caching [Thanks to Adama Groszer for
  patches!]

* Removed unwanted output when running in foreground mode.

* Cachemanager now supports listing all sources contained in cache
  dir.

* Fixed bug in cachemanager: under rare circumstances (two different
  input files with same MD5 hash digest *and* identical file stats