@@ -1,3 +1,4 @@
+import filecmp
 import os
 import shutil
 import tempfile
@@ -337,6 +338,30 @@ class TestCacheManager(CachingComponentsTestCase):
 
         self.assertEqual(cm.get_cached_file('nonsense_really'), None)
         return
+
+    def test_get_cached_file_by_src(self):
+        # we can get a cached file by source file and options
+        cm = CacheManager(self.workdir)
+        # without a cache key
+        my_id1 = cm.register_doc(self.src_path1, self.result_path1)
+        result1 = cm.get_cached_file_by_source(self.src_path1)
+        assert filecmp.cmp(result1, self.result_path1, shallow=False)
+
+    def test_get_cached_file_by_src_failed(self):
+        cm = CacheManager(self.workdir)
+        result1 = cm.get_cached_file_by_source(self.src_path1)
+        assert result1 is None
+
+    def test_get_cached_file_by_src_w_key(self):
+        cm = CacheManager(self.workdir)
+        my_id = cm.register_doc(self.src_path1, self.result_path1, 'mykey')
+        result1 = cm.get_cached_file_by_source(self.src_path1, 'mykey')
+        assert filecmp.cmp(result1, self.result_path1, shallow=False)
+        result2 = cm.get_cached_file_by_source(self.src_path1, 'otherkey')
+        assert result2 is None
+        cm.register_doc(self.src_path1, self.result_path2, 'otherkey')
+        result3 = cm.get_cached_file_by_source(self.src_path1, 'otherkey')
+        assert filecmp.cmp(result3, self.result_path2, shallow=False)
 
     def test_register_doc(self):
         cm = CacheManager(self.workdir)
