@@ -10,6 +10,9 @@ CHANGES
 * Added `get_cached` method for client and XMLRPC client to retrieve
   docs stored in cache.
 
+* Added `get_cached_file_by_source` method for cachemanager. This method
+  is expensive but allows finding cached files without a cache key.
+
 1.0 (2013-09-02)
 ================
 
